Merged behavior of two simple tasks into others.